fixed flex-wrap wrap

--- a/app/src/styles/dashboard/musicSyncControls.sass
+++ b/app/src/styles/dashboard/musicSyncControls.sass
@@ -9,7 +9,8 @@
         display: flex
         align-items: center
         justify-content: center
-        flex-wrap: warp
+        flex-wrap: wrap
+        margin: 20px
         gap: 20px
         padding: 15px
         background: $card
